--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SIT 725 Prac 4</title>
+    <title>SIT 725 Prac 7</title>
     <meta name="description" content="basic template for SIT 725 Prac 7">
     <meta name="author" content="SitePoint">
     <meta property="og:title" content="SIT 725 Prac 7">
@@ -130,6 +130,11 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script>let socket = io();
+        socket.on('number', (msg) => {
+        console.log('Random number: ' + msg);
+        })
+        </script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
